avformat/mpegtsenc: use the correct stream_types and write HDMV descriptors for m2ts

Fixes ticket #2622.

Signed-off-by: Marton Balint <cus@passwd.hu>